--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="">Home</a></li>
                 <li><a href="indexabout.html">About Me</a></li>
                 <li><a href="resume.html">Resume</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
          </div>
         </div>
