--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
          <div class="menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="">About Me</a></li>
+                <li><a href="indexabout.html">About Me</a></li>
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
@@ -46,7 +46,10 @@
 
 
             <div class="icon">
-                <p><i class="fa-solid fa-phone"></i>  +855979033023</p>
+                <p><i class="fa-solid fa-phone"></i>     +855979033023</p>
+                <p><i class="fa-brands fa-facebook"></i>     On Chhunlin</p>
+                <p><i class="fa-solid fa-envelope"></i>     <u>chhunlin.on@institute.pse.ngo</u></p>
+                <p><i class="fa-brands fa-facebook-messenger"></i>     On Chhunlin</p>
             </div>
         </div>
       </div>
