--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <h1>Full Stack Developer</h1>
               <p>Hi, I’m On Chhunlin, but you can call me Chhunlin.  I’m 16 years old. I’m from Kandal province but now I’m living in Phnom Penh city with my uncle. I’m form poor family. My parent are famers. I like technology and social media. I love creating new website that it make user friendly. I always use facebook and youtube to watch and learn more about the social media.  I ever did some project.  every day i study in PSE and the skill that i learn is Web Mobile App Development. I feel interested in this skill cause this skill use computer every time.</p>
               <div class="button">
-                <a href="">Learn more</a>
+                <a href="contact.html">Learn more</a>
               </div>
            </div>
 
