--- a/indexabout.html
+++ b/indexabout.html
@@ -37,7 +37,7 @@
             <div class="text">
                 <h1 style="color: aqua;">ChhunLin</h1>
                 <p>Discover Something About Me</p>
-                <a href="">See More</a>
+                <a href="contact.html">See More</a>
             </div>
             <div class="image">
                 <img src="images/photo_6312164816634099790_y(4).jpg" alt="">
@@ -71,14 +71,16 @@
              <div class="text3" style="width: 80%; margin: auto; margin-top: 2%; color: aliceblue;">
 
 
-                <h3 style="margin-bottom: 2%; font-size: 40px;">My Project Experien</h3>
+                <h3 style="margin-bottom: 2%; font-size: 40px;">My Project Experience</h3>
                 <p style="text-align: left; line-height: 2; font-size: 25px; margin-bottom: 0.5%;">First Project</p>
                 <p style="text-align: left; line-height: 2; font-size: 25px; margin-bottom: 1%;">I have four members in my team we design and write code related to tour and travel. Our project name’s Tour and Travel Agency.</p>
                 <img src="images/Untitled.jpeg" alt="" >
-
+                 <div style="display: flex; flex-direction: column;">
                 <p style="text-align: left; line-height: 2; font-size: 25px; margin-bottom: 0.5%;">Second Project</p>
                 <p style="text-align: left; line-height: 2; font-size: 25px; margin-bottom: 1%;">I have five members in my team we design in Figma related to Chocolate. Our project name’s Choco-Cambo.</p>
+                <a href="https://www.figma.com/file/RxMycF3TUwyKzTMLPEdiM4/Untitled?type=design&mode=design&t=7DbF154mJwAPd3Hr-0" target="_blank" style="padding: 20px; background-color: aqua;text-decoration: none;font-size: 20px;font-weight: 600;">Go to Project !click here!</a>
                 <img src="images/Screenshot from 2024-01-23 10-47-45.png" alt="">
+            </div>
 
 
              </div>
